RESOLVED FIXED95065
Web Inspector: DOM tree search issue with quotation marks
https://bugs.webkit.org/show_bug.cgi?id=95065
Summary Web Inspector: DOM tree search issue with quotation marks
Alexander Pavlov (apavlov)
Reported 2012-08-27 02:47:39 PDT
What steps will reproduce the problem? 1. Go to URL. 2. Right-click play button, "Inspect Element". Note this line is highlighted: <a href="#play" class="play" onclick="return false;" rel="nofollow">Play</a> 3. Press Ctrl-F 4. Type "play" (with quotation marks) What is the expected result? 5. See "play" being found and highlighted. What happens instead? 5. "play" is not found. 6. play (without quotation marks) is found in the exact same, it's currently hits 16 and 17 (although play is in that line 3 times). Upstreaming http://code.google.com/p/chromium/issues/detail?id=143911
Attachments
Patch (6.29 KB, patch)
2012-08-27 03:36 PDT, Alexander Pavlov (apavlov)
pfeldman: review+
Alexander Pavlov (apavlov)
Comment 1 2012-08-27 03:36:22 PDT
Pavel Feldman
Comment 2 2012-08-27 04:46:30 PDT
Comment on attachment 160688 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=160688&action=review > Source/WebCore/inspector/InspectorDOMAgent.cpp:861 > + if (!exactAttributeMatch && attribute->localName().find(attributeQuery) != notFound) { Why did this change? I wonder if we could support the 'class="foo' or 'width=100%' case here.
Alexander Pavlov (apavlov)
Comment 3 2012-08-27 04:53:51 PDT
(In reply to comment #2) > (From update of attachment 160688 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=160688&action=review > > > Source/WebCore/inspector/InspectorDOMAgent.cpp:861 > > + if (!exactAttributeMatch && attribute->localName().find(attributeQuery) != notFound) { > > Why did this change? I wonder if we could support the 'class="foo' or 'width=100%' case here. Fixed the inadvertent change. I'm not sure how we should handle the double quotes around the property values, and this might turn out to be a source of confusion for our users. Let's see what they ask for next.
Alexander Pavlov (apavlov)
Comment 4 2012-08-27 04:56:17 PDT
Note You need to log in before you can comment on or make changes to this bug.