Web Inspector: DOM tree search issue with quotation marks https://bugs.webkit.org/show_bug.cgi?id=95065

Reviewed by Pavel Feldman.

Source/WebCore:

Introduced the exact match mode for attributes (query enclosed in double quotes) where only entire attribute values
are matched against the search query (with the double quotes trimmed).

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::performSearch):

LayoutTests:

* inspector/elements/elements-panel-search-expected.txt:
* inspector/elements/elements-panel-search.html:

Canonical link: https://commits.webkit.org/112930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126749 268f45cc-cd09-0410-ab3c-d52691b4dbfc